[project]
name = "methylation-preprocessing"
version = "0.1.0"
description = "Preprocessing pipeline for DNA methylation beta-value data"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "skrebate>=0.62",
]
